<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/colorPrimaryContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDialogInfo"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:contentDescription="@string/banner_movie"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tvDialogInfoTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvDialogInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/ivDialogInfo"
            app:layout_constraintStart_toStartOf="@id/ivDialogInfo"
            app:layout_constraintTop_toBottomOf="@id/ivDialogInfo"
            tools:text="@string/title_movie_teste" />

        <TextView
            android:id="@+id/tvDialogInfoDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="@id/tvDialogInfoTitle"
            app:layout_constraintStart_toStartOf="@id/tvDialogInfoTitle"
            app:layout_constraintTop_toBottomOf="@id/tvDialogInfoTitle"
            tools:text="@string/description_movie_teste" />

        <Button
            android:id="@+id/btnDialogInfoOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorDefaultIcons"
            android:text="@string/info_ok"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDialogInfoDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>